test/positive/nor.net
INPUT a, b
OUTPUT o1, o2, o3, o4
VAR a, b: 8, o1, o2: 8, o3: 8, o4: 5
IN
o1 = NOR a a
o2 = NOR b 0x0f
o3 = NOR 0x0f b
o4 = NOR 01101 0d42 : 5
