test/negative/missing_in.net
INPUT a
OUTPUT b
VAR a, b
b = NOT a
